src/objects/SPH_Location__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <label>Legacy Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_By__c</fullName>
        <label>Legacy Updated By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_Date__c</fullName>
        <label>Legacy Updated Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <externalId>true</externalId>
        <label>Location Code</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <label>Location Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPH_Email_Account__c</fullName>
        <label>SPH Email Account</label>
        <type>Email</type>
    </fields>
    <label>SPH Location</label>
    <nameField>
        <label>SPH Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SPH Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>